Fix categories height alignment for very long names

--- a/html/app/themes/bpba/less/styles/_list.less
+++ b/html/app/themes/bpba/less/styles/_list.less
@@ -54,6 +54,8 @@
     width: 50%;
     height: auto;
     border-bottom: none;
+		min-height: 10em;
+    margin-bottom: 0;
   }
 
   .categories__columns .category-item:nth-child(2n+1) {
